# reversi

./: .gitignore  CMakeLists.txt  README.md
include/: game_board.h  hoge.h  utils.h
include/algorithms/: alpha_beta.h  base.h  mini_max.h  minimax.h  random.h  user.h
src/: main.cc  main.cpp
